--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="file:///C:/Users/PLPASIG/Desktop/website%20(2)/index.html" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="file:///C:/Users/PLPASIG/Desktop/website%20(2)/name%20and%20age.html">Age and Name</a></li>
                     <li><a href="file:///C:/Users/PLPASIG/Desktop/website%20(2)/family%20background.html">Family Background</a></li>
                     <li><a href="file:///C:/Users/PLPASIG/Desktop/website%20(2)/hobbies.html">Hobbies</a></li>
